v1.0.0/modules/schema/pages/class/LoadStatic.adoc
= `LoadStatic`
:toclevels: 4


+++General static load. This model represents the sensitivity of the real and reactive power consumed by the load to the amplitude and frequency of the bus voltage.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:LoadStatic`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`LoadStatic`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
LoadStatic {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



LoadAggregate {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




LoadStatic -> LoadAggregate: LoadAggregate


LoadStatic -> DiagramObject: DiagramObjects


LoadStatic -> InstanceSet: InstanceSet


LoadStatic -> Name: Names


LoadStatic -> ChangeSetMember: PropertiesCIMDataObject


LoadStatic -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<LoadAggregate,`LoadAggregate`>>
| 1
| xref::class/LoadAggregate.adoc[`LoadAggregate`]
| +++Aggregate load to which this aggregate static load belongs.+++

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<ep1,`ep1`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++First term voltage exponent for active power (<i>Ep1</i>).  Used only when .staticLoadModelType = exponential.+++

| <<ep2,`ep2`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Second term voltage exponent for active power (<i>Ep2</i>).  Used only when .staticLoadModelType = exponential.+++

| <<ep3,`ep3`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Third term voltage exponent for active power (<i>Ep3</i>).  Used only when .staticLoadModelType = exponential.+++

| <<eq1,`eq1`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++First term voltage exponent for reactive power (<i>Eq1</i>).  Used only when .staticLoadModelType = exponential.+++

| <<eq2,`eq2`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Second term voltage exponent for reactive power (<i>Eq2</i>).  Used only when .staticLoadModelType = exponential.+++

| <<eq3,`eq3`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Third term voltage exponent for reactive power (<i>Eq3</i>).  Used only when .staticLoadModelType = exponential.+++

| <<kp1,`kp1`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++First term voltage coefficient for active power (<i>K</i><i><sub>p1</sub></i>).  Not used when .staticLoadModelType = constantZ.+++

| <<kp2,`kp2`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Second term voltage coefficient for active power (<i>K</i><i><sub>p2</sub></i>).  Not used when .staticLoadModelType = constantZ.+++

| <<kp3,`kp3`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Third term voltage coefficient for active power (<i>K</i><i><sub>p3</sub></i>).  Not used when .staticLoadModelType = constantZ.+++

| <<kp4,`kp4`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Frequency coefficient for active power (<i>K</i><i><sub>p4</sub></i>)  (not = 0 if .staticLoadModelType = zIP2).  Used only when .staticLoadModelType = zIP2.+++

| <<kpf,`kpf`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Frequency deviation coefficient for active power (<i>K</i><i><sub>pf</sub></i>).  Not used when .staticLoadModelType = constantZ.+++

| <<kq1,`kq1`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++First term voltage coefficient for reactive power (<i>K</i><i><sub>q1</sub></i>).  Not used when .staticLoadModelType = constantZ.+++

| <<kq2,`kq2`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Second term voltage coefficient for reactive power (<i>K</i><i><sub>q2</sub></i>).  Not used when .staticLoadModelType = constantZ.+++

| <<kq3,`kq3`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Third term voltage coefficient for reactive power (<i>K</i><i><sub>q3</sub></i>).  Not used when .staticLoadModelType = constantZ.+++

| <<kq4,`kq4`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Frequency coefficient for reactive power (<i>K</i><i><sub>q4</sub></i>)  (not = 0 when .staticLoadModelType = zIP2).  Used only when .staticLoadModelType - zIP2.+++

| <<kqf,`kqf`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Frequency deviation coefficient for reactive power (<i>K</i><i><sub>qf</sub></i>).  Not used when .staticLoadModelType = constantZ.+++

| <<staticLoadModelType,`staticLoadModelType`>>
| 0..1
| xref::enumeration/StaticLoadModelKind.adoc[`StaticLoadModelKind`]
| +++Type of static load model.  Typical value = constantZ.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ep1]
=== `ep1`
+++First term voltage exponent for active power (<i>Ep1</i>).  Used only when .staticLoadModelType = exponential.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadStatic.ep1`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#ep2]
=== `ep2`
+++Second term voltage exponent for active power (<i>Ep2</i>).  Used only when .staticLoadModelType = exponential.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadStatic.ep2`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#ep3]
=== `ep3`
+++Third term voltage exponent for active power (<i>Ep3</i>).  Used only when .staticLoadModelType = exponential.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadStatic.ep3`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#eq1]
=== `eq1`
+++First term voltage exponent for reactive power (<i>Eq1</i>).  Used only when .staticLoadModelType = exponential.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadStatic.eq1`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#eq2]
=== `eq2`
+++Second term voltage exponent for reactive power (<i>Eq2</i>).  Used only when .staticLoadModelType = exponential.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadStatic.eq2`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#eq3]
=== `eq3`
+++Third term voltage exponent for reactive power (<i>Eq3</i>).  Used only when .staticLoadModelType = exponential.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadStatic.eq3`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#kp1]
=== `kp1`
+++First term voltage coefficient for active power (<i>K</i><i><sub>p1</sub></i>).  Not used when .staticLoadModelType = constantZ.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadStatic.kp1`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#kp2]
=== `kp2`
+++Second term voltage coefficient for active power (<i>K</i><i><sub>p2</sub></i>).  Not used when .staticLoadModelType = constantZ.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadStatic.kp2`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#kp3]
=== `kp3`
+++Third term voltage coefficient for active power (<i>K</i><i><sub>p3</sub></i>).  Not used when .staticLoadModelType = constantZ.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadStatic.kp3`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#kp4]
=== `kp4`
+++Frequency coefficient for active power (<i>K</i><i><sub>p4</sub></i>)  (not = 0 if .staticLoadModelType = zIP2).  Used only when .staticLoadModelType = zIP2.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadStatic.kp4`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#kpf]
=== `kpf`
+++Frequency deviation coefficient for active power (<i>K</i><i><sub>pf</sub></i>).  Not used when .staticLoadModelType = constantZ.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadStatic.kpf`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#kq1]
=== `kq1`
+++First term voltage coefficient for reactive power (<i>K</i><i><sub>q1</sub></i>).  Not used when .staticLoadModelType = constantZ.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadStatic.kq1`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#kq2]
=== `kq2`
+++Second term voltage coefficient for reactive power (<i>K</i><i><sub>q2</sub></i>).  Not used when .staticLoadModelType = constantZ.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadStatic.kq2`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#kq3]
=== `kq3`
+++Third term voltage coefficient for reactive power (<i>K</i><i><sub>q3</sub></i>).  Not used when .staticLoadModelType = constantZ.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadStatic.kq3`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#kq4]
=== `kq4`
+++Frequency coefficient for reactive power (<i>K</i><i><sub>q4</sub></i>)  (not = 0 when .staticLoadModelType = zIP2).  Used only when .staticLoadModelType - zIP2.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadStatic.kq4`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#kqf]
=== `kqf`
+++Frequency deviation coefficient for reactive power (<i>K</i><i><sub>qf</sub></i>).  Not used when .staticLoadModelType = constantZ.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadStatic.kqf`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#LoadAggregate]
=== `LoadAggregate`
+++Aggregate load to which this aggregate static load belongs.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadStatic.LoadAggregate`
| Cardinality
| 1
| Type
| xref::class/LoadAggregate.adoc[`LoadAggregate`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#staticLoadModelType]
=== `staticLoadModelType`
+++Type of static load model.  Typical value = constantZ.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadStatic.staticLoadModelType`
| Cardinality
| 0..1
| Type
| xref::enumeration/StaticLoadModelKind.adoc[`StaticLoadModelKind`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===


